# retromake

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp  shared.cpp  shared.h  static.cpp  static.h
include/: codemodel.h  json.h  module.h  module_clang.h  module_codeblocks.h  module_gcc.h  module_make.h  module_native_debug.h  module_vscode.h  module_vscodium.h  retromake.h  util.h  xml.h
source/: codemodel.cpp  json.cpp  module.cpp  module_clang.cpp  module_codeblocks.cpp  module_gcc.cpp  module_make.cpp  module_native_debug.cpp  module_vscode.cpp  module_vscodium.cpp  retromake.cpp  util.cpp  xml.cpp
